fix footer on mobile

--- a/styles/header_footer.css
+++ b/styles/header_footer.css
@@ -121,17 +121,22 @@ nav>* {
 
 footer {
     background-color: var(--secondary);
+    white-space: nowrap;
     display: flex;
+}
+
+@media only screen and (max-width: 460px) {
+    .footercontainer {
+        flex-direction: column;
+    }
 }
 
 .footercontainer {
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.footer-button {
-    padding: 2rem;
+    padding: 1.5rem;
+    gap: 1.5rem;
 }
 
 .burger img {
